--- a/style.css
+++ b/style.css
@@ -1649,7 +1649,8 @@ p {
 .contact-section {
   position: relative;
   z-index: 3;
-  padding-top: 100px;
+  padding-top: 3rem;
+  padding-bottom: 3.5rem;
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .contact-section {
@@ -1801,6 +1802,7 @@ p {
 
 /* Footer eleven css */
 .footer-eleven {
+  border-top: 1px solid var(--dark-1);
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: var(--white);
